--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dependencies": {
         "@angular/animations": "^5.2.0",
         "@angular/common": "^5.2.0",
-        "@angular/compiler": "^5.2.0",
+        "@angular/compiler": "^5.2.10",
         "@angular/core": "^5.2.0",
         "@angular/forms": "^5.2.0",
         "@angular/http": "^5.2.0",
@@ -23,9 +23,11 @@
         "@angular/router": "^5.2.0",
         "@ng-bootstrap/ng-bootstrap": "^1.1.2",
         "bootstrap": "^4.0.0",
+        "buffer": "^5.1.0",
         "core-js": "^2.4.1",
         "moment": "^2.22.1",
         "moment-timezone": "^0.5.16",
+        "pouchdb": "^6.4.3",
         "rxjs": "^5.5.10",
         "zone.js": "^0.8.19"
     },
@@ -36,6 +38,7 @@
         "@types/jasmine": "~2.8.3",
         "@types/jasminewd2": "~2.0.2",
         "@types/node": "~6.0.60",
+        "@types/pouchdb": "^6.3.2",
         "codelyzer": "^4.0.1",
         "jasmine-core": "~2.8.0",
         "jasmine-spec-reporter": "~4.2.1",
