--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "core-js": "^2.4.1",
         "moment": "^2.22.1",
         "moment-timezone": "^0.5.16",
+        "ngx-loading": "^1.0.14",
         "pouchdb": "^6.4.3",
         "rxjs": "^5.5.10",
+        "splash-screen": "^4.0.1",
         "zone.js": "^0.8.19"
     },
     "devDependencies": {
